--- a/styles/scss/_alissa.scss
+++ b/styles/scss/_alissa.scss
@@ -24,7 +24,8 @@
 
     img {
       display: block;
-      max-width: 100%;
+      max-width: 400px;
+      width: 100%;
       height: auto;
     }
   }
