--- a/styles/scss/_theGram.scss
+++ b/styles/scss/_theGram.scss
@@ -23,7 +23,8 @@
 
         margin: 20px;
       img {
-        width: 75vw;
+        width: 100%;
+        max-width: 400px;
         margin: auto;
       }
     }
