img path update

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -294,7 +294,7 @@ header {
 }
 
 header::before {
-  background: url(/assets/image-1-mobile_2x.avif) no-repeat center center;
+  background: url(/Bikerland/assets/image-1-mobile_2x.avif) no-repeat center center;
   background-color: white;
   background-size: cover;
   content: ' ';
@@ -565,7 +565,7 @@ header .hero__scroll .chevron.left:before {
   display: flex;
   background-size: cover;
   background-position: center;
-  background-image: url("/assets/image-2.avif");
+  background-image: url("/Bikerland/assets/image-2.avif");
 }
 
 @media screen and (min-width: 1024px) {
@@ -615,7 +615,7 @@ header .hero__scroll .chevron.left:before {
   display: flex;
   background-size: cover;
   background-position: center;
-  background-image: url("/assets/image-7.avif");
+  background-image: url("/Bikerland/assets/image-7.avif");
 }
 
 @media screen and (min-width: 1024px) {
@@ -720,7 +720,7 @@ header .hero__scroll .chevron.left:before {
   color: #ffffff;
   background-position: center right;
   background-size: cover;
-  background-image: url("/assets/image-5.avif");
+  background-image: url("/Bikerland/assets/image-5.avif");
 }
 
 .links i {
