--- a/styles/scss/_links.scss
+++ b/styles/scss/_links.scss
@@ -9,7 +9,7 @@
   color: $white;
   background-position: center right;
   background-size: cover;
-  background-image: url('/assets/image-5.avif');
+  background-image: url('/Bikerland/assets/image-5.avif');
 
   i {
     font-size: 3rem;
