--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -519,7 +519,7 @@ header .hero__scroll .chevron.left:before {
 
 @media screen and (min-width: 1200px) {
   header::before {
-    background: url(/assets/image-1.avif) no-repeat center center;
+    background: url(/Bikerland/assets/image-1.avif) no-repeat center center;
     background-size: cover;
   }
   header h1 {
