--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -853,6 +853,8 @@ footer form input {
   height: 40px;
   margin: 0 auto;
   font-size: 1rem;
+  background-color: #ffffff;
+  color: #1f2022;
 }
 
 footer input[type="submit"] {
