--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -55,6 +55,8 @@ footer{
     height: 40px;
     margin: 0 auto;
     font-size: 1rem;
+    background-color: #ffffff;
+    color: #1f2022;
   }
 
   input[type="submit"] {
