contact link fix

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -835,7 +835,7 @@ footer .copyright {
 
 footer .copyright p {
   padding: 10px;
-  color: #4a4a4a;
+  color: #ffffff;
   font-size: 1.5rem;
   text-align: center;
 }
