--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -35,7 +35,7 @@ footer{
     background-color: #000000;
     p {
       padding: 10px;
-      color: $darkGrey;
+      color: $white;
       font-size: 1.5rem;
       text-align: center;
     }
