--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -9,7 +9,7 @@
   }
 
   &-img {
-    @include image-styling('/Bikerland/assets/image-2.avif');
+    @include image-styling('/assets/image-2.webp');
   }
 }
 
