--- a/styles/scss/_mission.scss
+++ b/styles/scss/_mission.scss
@@ -9,7 +9,7 @@
   }
 
   &-img {
-    @include image-styling('/Bikerland/assets/image-7.avif');
+    @include image-styling('/assets/image-7.webp');
   }
 }
 
