--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -294,7 +294,7 @@ header {
 }
 
 header::before {
-  background: url(/assets/image-1-mobile_2x.webp) no-repeat center center;
+  background: url(/assets/image-1-mobile.webp) no-repeat center center;
   background-color: white;
   background-size: cover;
   content: ' ';
